Further docs updates

--- a/docs/examples/cracked_properties.ipynb
+++ b/docs/examples/cracked_properties.ipynb
@@ -24,14 +24,15 @@
    "outputs": [],
    "source": [
     "import numpy as np\n",
-    "from concreteproperties.material import Concrete, SteelBar\n",
-    "from concreteproperties.stress_strain_profile import (\n",
+    "from concreteproperties import (\n",
+    "    Concrete, \n",
+    "    SteelBar,\n",
     "    ConcreteLinear,\n",
     "    RectangularStressBlock,\n",
     "    SteelElasticPlastic,\n",
+    "    ConcreteSection,\n",
     ")\n",
-    "from sectionproperties.pre.library.concrete_sections import concrete_tee_section\n",
-    "from concreteproperties.concrete_section import ConcreteSection"
+    "from sectionproperties.pre.library import concrete_tee_section"
    ]
   },
   {
@@ -97,18 +98,18 @@
    "outputs": [],
    "source": [
     "geom = concrete_tee_section(\n",
-    "    b=300,\n",
     "    d=900,\n",
-    "    b_f=1200,\n",
+    "    b=300,\n",
     "    d_f=200,\n",
+    "    b_f=1200,\n",
     "    dia_top=16,\n",
-    "    n_top=6,\n",
-    "    dia_bot=32,\n",
-    "    n_bot=3,\n",
-    "    n_circle=4,\n",
-    "    cover=30,\n",
     "    area_top=200,\n",
+    "    n_top=6,\n",
+    "    c_top=30,\n",
+    "    dia_bot=32,\n",
     "    area_bot=800,\n",
+    "    n_bot=3,\n",
+    "    c_bot=30,\n",
     "    conc_mat=concrete,\n",
     "    steel_mat=steel,\n",
     ")\n",
@@ -122,7 +123,7 @@
    "id": "c4d5fa61",
    "metadata": {},
    "source": [
-    "## Calclulate Cracked Properties\n",
+    "## Calculate Cracked Properties\n",
     "\n",
     "In this example we'll peform a cracked analysis for sagging ($\\theta=0$) and hogging ($\\theta=\\pi$). To do this we call the ``calculate_cracked_properties()`` method:"
    ]
@@ -252,7 +253,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.12"
+   "version": "3.11.4"
   }
  },
  "nbformat": 4,
