--- a/docs/user_guide/design_codes/as3600.rst
+++ b/docs/user_guide/design_codes/as3600.rst
@@ -39,7 +39,7 @@ material objects whose attributes comply with the standard.
 .. plot::
   :include-source: True
 
-  from concreteproperties.design_codes.as3600 import AS3600
+  from concreteproperties.design_codes import AS3600
 
   design_code = AS3600()
   concrete = design_code.create_concrete_material(compressive_strength=40)
@@ -57,7 +57,7 @@ material objects whose attributes comply with the standard.
 .. plot::
   :include-source: True
 
-  from concreteproperties.design_codes.as3600 import AS3600
+  from concreteproperties.design_codes import AS3600
 
   design_code = AS3600()
   steel = design_code.create_steel_material()
