--- a/docs/examples/area_properties.ipynb
+++ b/docs/examples/area_properties.ipynb
@@ -23,14 +23,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from concreteproperties.material import Concrete, SteelBar\n",
-    "from concreteproperties.stress_strain_profile import (\n",
+    "from concreteproperties import (\n",
+    "    Concrete,\n",
+    "    SteelBar,\n",
     "    ConcreteLinear,\n",
     "    RectangularStressBlock,\n",
     "    SteelElasticPlastic,\n",
+    "    ConcreteSection,\n",
     ")\n",
-    "from sectionproperties.pre.library.concrete_sections import concrete_rectangular_section\n",
-    "from concreteproperties.concrete_section import ConcreteSection"
+    "from sectionproperties.pre.library import concrete_rectangular_section"
    ]
   },
   {
@@ -90,22 +91,20 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "5f88f832",
-   "metadata": {
-    "scrolled": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "geom = concrete_rectangular_section(\n",
-    "    b=400,\n",
     "    d=600,\n",
+    "    b=400,\n",
     "    dia_top=20,\n",
-    "    n_top=3,\n",
-    "    dia_bot=24,\n",
-    "    n_bot=3,\n",
-    "    n_circle=4,\n",
-    "    cover=30,\n",
     "    area_top=310,\n",
+    "    n_top=3,\n",
+    "    c_top=30,\n",
+    "    dia_bot=24,\n",
     "    area_bot=450,\n",
+    "    n_bot=3,\n",
+    "    c_bot=30,\n",
     "    conc_mat=concrete,\n",
     "    steel_mat=steel,\n",
     ")\n",
@@ -173,7 +172,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.12"
+   "version": "3.11.4"
   }
  },
  "nbformat": 4,
