--- a/docs/user_guide/design_codes/nzs3101.rst
+++ b/docs/user_guide/design_codes/nzs3101.rst
@@ -39,7 +39,7 @@ easily create material objects whose attributes comply with the standard.
 .. plot::
   :include-source: True
 
-  from concreteproperties.design_codes.nzs3101 import NZS3101
+  from concreteproperties.design_codes import NZS3101
 
   design_code = NZS3101()
   concrete = design_code.create_concrete_material(compressive_strength=40)
@@ -57,7 +57,7 @@ easily create material objects whose attributes comply with the standard.
 .. plot::
   :include-source: True
 
-  from concreteproperties.design_codes.nzs3101 import NZS3101
+  from concreteproperties.design_codes import NZS3101
 
   design_code = NZS3101()
   steel = design_code.create_steel_material(steel_grade="500E")
