--- a/docs/examples/area_properties.ipynb
+++ b/docs/examples/area_properties.ipynb
@@ -84,7 +84,7 @@
    "source": [
     "## Create Geometry and Concrete Section\n",
     "\n",
-    "The section being analysed in this example is a 600D x 400W rectangular beam. The reinforcement detailed is 3N20 top bars and 3N24 bottom bars, with 30 mm of clear cover. The geometry is generated using the *sectionproperties* concrete sections library."
+    "The section being analysed in this example is a 600D x 400W rectangular beam. The reinforcement detailed is 3N20 top bars and 3N24 bottom bars, with 30 mm of cover. The geometry is generated using the *sectionproperties* concrete sections library."
    ]
   },
   {
