--- a/docs/examples/as3600.ipynb
+++ b/docs/examples/as3600.ipynb
@@ -18,10 +18,14 @@
    "source": [
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
-    "from concreteproperties.design_codes.as3600 import AS3600\n",
-    "import concreteproperties.stress_strain_profile as ssp\n",
-    "from sectionproperties.pre.library.concrete_sections import concrete_rectangular_section\n",
-    "from concreteproperties.concrete_section import ConcreteSection\n",
+    "from concreteproperties.design_codes import AS3600\n",
+    "from concreteproperties import (\n",
+    "    RectangularStressBlock,\n",
+    "    BilinearStressStrain,\n",
+    "    EurocodeParabolicUltimate,\n",
+    "    ConcreteSection,\n",
+    ")\n",
+    "from sectionproperties.pre.library import concrete_rectangular_section\n",
     "from concreteproperties.results import MomentInteractionResults"
    ]
   },
@@ -103,22 +107,20 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "62f94928",
-   "metadata": {
-    "scrolled": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "geom = concrete_rectangular_section(\n",
     "    b=450,\n",
     "    d=600,\n",
     "    dia_top=20,\n",
-    "    n_top=5,\n",
-    "    dia_bot=20,\n",
-    "    n_bot=5,\n",
-    "    n_circle=4,\n",
-    "    cover=30,\n",
     "    area_top=310,\n",
+    "    n_top=5,\n",
+    "    c_top=30,\n",
+    "    dia_bot=20,\n",
     "    area_bot=310,\n",
+    "    n_bot=5,\n",
+    "    c_bot=30,\n",
     "    conc_mat=concrete,\n",
     "    steel_mat=steel,\n",
     ")\n",
@@ -167,9 +169,7 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "7d5024b5",
-   "metadata": {
-    "scrolled": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "f_ult_res, ult_res, phi = design_code.ultimate_bending_capacity()\n",
@@ -279,9 +279,7 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "bd208faa",
-   "metadata": {
-    "scrolled": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# design load cases\n",
@@ -325,7 +323,7 @@
    "outputs": [],
    "source": [
     "# bilinear\n",
-    "concrete.ultimate_stress_strain_profile = ssp.BilinearStressStrain(\n",
+    "concrete.ultimate_stress_strain_profile = BilinearStressStrain(\n",
     "    compressive_strength=0.9 * 40,\n",
     "    compressive_strain=0.0015,\n",
     "    ultimate_strain=0.003,\n",
@@ -333,7 +331,7 @@
     "f_mi_res_bil, _, _ = design_code.moment_interaction_diagram(progress_bar=False)\n",
     "\n",
     "# parabolic\n",
-    "concrete.ultimate_stress_strain_profile = ssp.EurocodeParabolicUltimate(\n",
+    "concrete.ultimate_stress_strain_profile = EurocodeParabolicUltimate(\n",
     "    compressive_strength=0.9 * 40,\n",
     "    compressive_strain=0.0015,\n",
     "    ultimate_strain=0.003,\n",
@@ -373,7 +371,7 @@
    "outputs": [],
    "source": [
     "# reset concrete ultimate profile\n",
-    "concrete.ultimate_stress_strain_profile = ssp.RectangularStressBlock(\n",
+    "concrete.ultimate_stress_strain_profile = RectangularStressBlock(\n",
     "    compressive_strength=40,\n",
     "    alpha=0.79,\n",
     "    gamma=0.87,\n",
@@ -393,9 +391,7 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "120cbe55",
-   "metadata": {
-    "scrolled": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# plot case 1\n",
@@ -436,7 +432,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.12"
+   "version": "3.11.4"
   },
   "vscode": {
    "interpreter": {
