--- a/docs/examples/biaxial_bending.ipynb
+++ b/docs/examples/biaxial_bending.ipynb
@@ -24,15 +24,16 @@
    "outputs": [],
    "source": [
     "import numpy as np\n",
-    "from concreteproperties.material import Concrete, SteelBar\n",
-    "from concreteproperties.stress_strain_profile import (\n",
+    "from concreteproperties import (\n",
+    "    Concrete,\n",
+    "    SteelBar,\n",
     "    ConcreteLinear,\n",
     "    RectangularStressBlock,\n",
     "    SteelElasticPlastic,\n",
+    "    add_bar_rectangular_array,\n",
+    "    ConcreteSection,\n",
     ")\n",
-    "from sectionproperties.pre.library.primitive_sections import rectangular_section\n",
-    "from concreteproperties.pre import add_bar_rectangular_array\n",
-    "from concreteproperties.concrete_section import ConcreteSection\n",
+    "from sectionproperties.pre.library import rectangular_section\n",
     "from concreteproperties.results import BiaxialBendingResults"
    ]
   },
@@ -227,9 +228,7 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "7d0774f2",
-   "metadata": {
-    "scrolled": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "BiaxialBendingResults.plot_multiple_diagrams_3d(biaxial_results)"
@@ -300,7 +299,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.12"
+   "version": "3.11.4"
   }
  },
  "nbformat": 4,
