--- a/docs/examples/composite_section.ipynb
+++ b/docs/examples/composite_section.ipynb
@@ -24,13 +24,23 @@
    "outputs": [],
    "source": [
     "import numpy as np\n",
-    "from concreteproperties.material import Concrete, Steel, SteelBar\n",
-    "import concreteproperties.stress_strain_profile as ssp\n",
-    "import sectionproperties.pre.library.primitive_sections as sp_ps\n",
-    "import sectionproperties.pre.library.steel_sections as sp_ss\n",
-    "import sectionproperties.pre.library.concrete_sections as sp_cs\n",
-    "import concreteproperties.pre as cp_pre\n",
-    "from concreteproperties.concrete_section import ConcreteSection\n",
+    "from concreteproperties import (\n",
+    "    Concrete,\n",
+    "    Steel,\n",
+    "    SteelBar,\n",
+    "    ConcreteLinearNoTension,\n",
+    "    RectangularStressBlock,\n",
+    "    SteelElasticPlastic,\n",
+    "    add_bar_circular_array,\n",
+    "    add_bar_rectangular_array,\n",
+    "    ConcreteSection,\n",
+    ")\n",
+    "from sectionproperties.pre.library import (\n",
+    "    rectangular_section,\n",
+    "    circular_section_by_area,\n",
+    "    i_section,\n",
+    "    concrete_circular_section,\n",
+    ")\n",
     "import concreteproperties.results as res"
    ]
   },
@@ -53,12 +63,12 @@
     "concrete = Concrete(\n",
     "    name=\"50 MPa Concrete\",\n",
     "    density=2.4e-6,\n",
-    "    stress_strain_profile=ssp.ConcreteLinearNoTension(\n",
+    "    stress_strain_profile=ConcreteLinearNoTension(\n",
     "        elastic_modulus=34.8e3,\n",
     "        ultimate_strain=0.003,\n",
     "        compressive_strength=0.9 * 50,\n",
     "    ),\n",
-    "    ultimate_stress_strain_profile=ssp.RectangularStressBlock(\n",
+    "    ultimate_stress_strain_profile=RectangularStressBlock(\n",
     "        compressive_strength=50,\n",
     "        alpha=0.775,\n",
     "        gamma=0.845,\n",
@@ -71,7 +81,7 @@
     "steel_300 = Steel(\n",
     "    name=\"300 MPa Structural Steel\",\n",
     "    density=7.85e-6,\n",
-    "    stress_strain_profile=ssp.SteelElasticPlastic(\n",
+    "    stress_strain_profile=SteelElasticPlastic(\n",
     "        yield_strength=300,\n",
     "        elastic_modulus=200e3,\n",
     "        fracture_strain=0.05,\n",
@@ -82,7 +92,7 @@
     "steel_bar = SteelBar(\n",
     "    name=\"500 MPa Steel Bar\",\n",
     "    density=7.85e-6,\n",
-    "    stress_strain_profile=ssp.SteelElasticPlastic(\n",
+    "    stress_strain_profile=SteelElasticPlastic(\n",
     "        yield_strength=500,\n",
     "        elastic_modulus=200e3,\n",
     "        fracture_strain=0.05,\n",
@@ -108,10 +118,10 @@
    "outputs": [],
    "source": [
     "# create 500 square concrete\n",
-    "conc = sp_ps.rectangular_section(d=500, b=500, material=concrete)\n",
+    "conc = rectangular_section(d=500, b=500, material=concrete)\n",
     "\n",
     "# create 310UC97 and centre to column\n",
-    "uc = sp_ss.i_section(\n",
+    "uc = i_section(\n",
     "    d=308,\n",
     "    b=305,\n",
     "    t_f=15.4,\n",
@@ -125,7 +135,7 @@
     "geom = conc - uc + uc\n",
     "\n",
     "# add 12N20 reinforcing bars\n",
-    "geom = cp_pre.add_bar_rectangular_array(\n",
+    "geom = add_bar_rectangular_array(\n",
     "    geometry=geom,\n",
     "    area=310,\n",
     "    material=steel_bar,\n",
@@ -175,9 +185,7 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "91c51681",
-   "metadata": {
-    "scrolled": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "cr_res = conc_sec.calculate_cracked_properties()\n",
@@ -208,9 +216,7 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "b4dc4669",
-   "metadata": {
-    "scrolled": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "mk_res.plot_results(fmt=\"kx-\")"
@@ -220,9 +226,7 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "abd35873",
-   "metadata": {
-    "scrolled": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "serv_stress = conc_sec.calculate_service_stress(\n",
@@ -307,7 +311,7 @@
     "steel_350 = Steel(\n",
     "    name=\"350 MPa Structural Steel\",\n",
     "    density=7.85e-6,\n",
-    "    stress_strain_profile=ssp.SteelElasticPlastic(\n",
+    "    stress_strain_profile=SteelElasticPlastic(\n",
     "        yield_strength=350,\n",
     "        elastic_modulus=200e3,\n",
     "        fracture_strain=0.05,\n",
@@ -324,14 +328,14 @@
    "outputs": [],
    "source": [
     "# create outer diameter of steel column\n",
-    "steel_col = sp_ps.circular_section_by_area(\n",
+    "steel_col = circular_section_by_area(\n",
     "    area=np.pi * 323.9**2 / 4,\n",
     "    n=64,\n",
     "    material=steel_350,\n",
     ")\n",
     "\n",
     "# create inner diameter of steel column, concrete filled\n",
-    "inner_conc = sp_ps.circular_section_by_area(\n",
+    "inner_conc = circular_section_by_area(\n",
     "    area=np.pi * (323.9 - 2 * 12.7) ** 2 / 4,\n",
     "    n=64,\n",
     "    material=concrete,\n",
@@ -343,7 +347,7 @@
     "# add reinforcement\n",
     "r_bars = 323.9 / 2 - 12.7 - 30 - 10  # 30 mm cover from inside of steel\n",
     "\n",
-    "geom_comp = cp_pre.add_bar_circular_array(\n",
+    "geom_comp = add_bar_circular_array(\n",
     "    geometry=geom_comp,\n",
     "    area=310,\n",
     "    material=steel_bar,\n",
@@ -356,15 +360,14 @@
     "conc_sec_comp.plot_section()\n",
     "\n",
     "# create 350 diameter column for comparison\n",
-    "geom_conc = sp_cs.concrete_circular_section(\n",
+    "geom_conc = concrete_circular_section(\n",
     "    d=350,\n",
-    "    n=64,\n",
-    "    dia=20,\n",
-    "    n_bar=6,\n",
-    "    n_circle=4,\n",
-    "    cover=30 + 12,  # 30 mm cover + 12 mm tie\n",
     "    area_conc=np.pi * 350**2 / 4,\n",
+    "    n_conc=64,\n",
+    "    dia_bar=20,\n",
     "    area_bar=310,\n",
+    "    n_bar=6,\n",
+    "    cover=30 + 12,  # 30 mm cover + 12 mm tie\n",
     "    conc_mat=concrete,\n",
     "    steel_mat=steel_bar,\n",
     ")\n",
@@ -510,12 +513,12 @@
     "concrete = Concrete(\n",
     "    name=\"32 MPa Concrete\",\n",
     "    density=2.4e-6,\n",
-    "    stress_strain_profile=ssp.ConcreteLinearNoTension(\n",
+    "    stress_strain_profile=ConcreteLinearNoTension(\n",
     "        elastic_modulus=30.1e3,\n",
     "        ultimate_strain=0.003,\n",
     "        compressive_strength=0.9 * 32,\n",
     "    ),\n",
-    "    ultimate_stress_strain_profile=ssp.RectangularStressBlock(\n",
+    "    ultimate_stress_strain_profile=RectangularStressBlock(\n",
     "        compressive_strength=32,\n",
     "        alpha=0.802,\n",
     "        gamma=0.89,\n",
@@ -542,7 +545,7 @@
    "outputs": [],
    "source": [
     "# create 530UB92\n",
-    "ub = sp_ss.i_section(\n",
+    "ub = i_section(\n",
     "    d=533,\n",
     "    b=209,\n",
     "    t_f=15.6,\n",
@@ -554,7 +557,7 @@
     "\n",
     "# create concrete slab, centre on top of UB\n",
     "conc_slab = (\n",
-    "    sp_ps.rectangular_section(\n",
+    "    rectangular_section(\n",
     "        d=120,\n",
     "        b=1500,\n",
     "        material=concrete,\n",
@@ -707,7 +710,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.12"
+   "version": "3.11.4"
   },
   "vscode": {
    "interpreter": {
