--- a/docs/examples/moment_curvature.ipynb
+++ b/docs/examples/moment_curvature.ipynb
@@ -24,14 +24,14 @@
    "outputs": [],
    "source": [
     "import numpy as np\n",
-    "from concreteproperties.material import Concrete, SteelBar\n",
-    "import concreteproperties.stress_strain_profile as ssp\n",
-    "from sectionproperties.pre.library.primitive_sections import (\n",
-    "    rectangular_section,\n",
-    "    circular_section,\n",
+    "from sectionproperties.pre.library import rectangular_section, circular_section\n",
+    "from concreteproperties import (\n",
+    "    Concrete,\n",
+    "    SteelBar,\n",
+    "    add_bar_rectangular_array,\n",
+    "    ConcreteSection,\n",
     ")\n",
-    "from concreteproperties.pre import add_bar_rectangular_array\n",
-    "from concreteproperties.concrete_section import ConcreteSection\n",
+    "import concreteproperties.stress_strain_profile as ssp\n",
     "from concreteproperties.results import MomentCurvatureResults"
    ]
   },
@@ -184,9 +184,7 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "5f88f832",
-   "metadata": {
-    "scrolled": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "col = rectangular_section(d=350, b=600)\n",
@@ -785,7 +783,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.12"
+   "version": "3.11.4"
   },
   "vscode": {
    "interpreter": {
