--- a/docs/examples/moment_interaction.ipynb
+++ b/docs/examples/moment_interaction.ipynb
@@ -24,15 +24,16 @@
    "outputs": [],
    "source": [
     "import numpy as np\n",
-    "from concreteproperties.material import Concrete, SteelBar\n",
-    "from concreteproperties.stress_strain_profile import (\n",
+    "from concreteproperties import (\n",
+    "    Concrete,\n",
+    "    SteelBar,\n",
     "    ConcreteLinear,\n",
     "    RectangularStressBlock,\n",
     "    SteelElasticPlastic,\n",
+    "    ConcreteSection,\n",
     ")\n",
-    "from sectionproperties.pre.library.concrete_sections import concrete_rectangular_section\n",
-    "from concreteproperties.concrete_section import ConcreteSection\n",
-    "from concreteproperties.results import MomentInteractionResults"
+    "from concreteproperties.results import MomentInteractionResults\n",
+    "from sectionproperties.pre.library import concrete_rectangular_section"
    ]
   },
   {
@@ -97,13 +98,13 @@
     "    b=400,\n",
     "    d=600,\n",
     "    dia_top=20,\n",
-    "    n_top=3,\n",
-    "    dia_bot=24,\n",
-    "    n_bot=3,\n",
-    "    n_circle=4,\n",
-    "    cover=30,\n",
     "    area_top=310,\n",
+    "    n_top=3,\n",
+    "    c_top=30,\n",
+    "    dia_bot=24,\n",
     "    area_bot=450,\n",
+    "    n_bot=3,\n",
+    "    c_bot=30,\n",
     "    conc_mat=concrete,\n",
     "    steel_mat=steel,\n",
     ")\n",
@@ -195,13 +196,13 @@
     "        b=400,\n",
     "        d=600,\n",
     "        dia_top=16,\n",
-    "        n_top=6,\n",
-    "        dia_bot=16,\n",
-    "        n_bot=6,\n",
-    "        n_circle=4,\n",
-    "        cover=66,\n",
     "        area_top=200 * (idx + 1),\n",
+    "        n_top=6,\n",
+    "        c_top=66,\n",
+    "        dia_bot=16,\n",
     "        area_bot=200 * (idx + 1),\n",
+    "        n_bot=6,\n",
+    "        c_bot=66,\n",
     "        conc_mat=concrete,\n",
     "        steel_mat=steel,\n",
     "    )\n",
@@ -244,13 +245,13 @@
     "    b=400,\n",
     "    d=600,\n",
     "    dia_top=20,\n",
-    "    n_top=3,\n",
-    "    dia_bot=24,\n",
-    "    n_bot=3,\n",
-    "    n_circle=4,\n",
-    "    cover=30,\n",
     "    area_top=310,\n",
+    "    n_top=3,\n",
+    "    c_top=30,\n",
+    "    dia_bot=24,\n",
     "    area_bot=450,\n",
+    "    n_bot=3,\n",
+    "    c_bot=30,\n",
     "    conc_mat=concrete,\n",
     "    steel_mat=steel,\n",
     ")\n",
@@ -337,9 +338,7 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "6886b953",
-   "metadata": {
-    "scrolled": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "mi_res = conc_sec.moment_interaction_diagram(\n",
@@ -405,7 +404,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.12"
+   "version": "3.11.4"
   },
   "vscode": {
    "interpreter": {
