--- a/docs/examples/nzs3101.ipynb
+++ b/docs/examples/nzs3101.ipynb
@@ -18,14 +18,21 @@
    "source": [
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
-    "from concreteproperties.design_codes.nzs3101 import NZS3101\n",
-    "import concreteproperties.stress_strain_profile as ssp\n",
-    "from concreteproperties.material import Concrete\n",
-    "from sectionproperties.pre.library.concrete_sections import concrete_rectangular_section\n",
-    "from concreteproperties.concrete_section import ConcreteSection\n",
-    "from concreteproperties.results import MomentInteractionResults\n",
-    "from concreteproperties.results import BiaxialBendingResults\n",
-    "from concreteproperties.results import MomentCurvatureResults"
+    "\n",
+    "from sectionproperties.pre.library import concrete_rectangular_section\n",
+    "\n",
+    "from concreteproperties.design_codes import NZS3101\n",
+    "from concreteproperties import (\n",
+    "    Concrete,\n",
+    "    ModifiedMander,\n",
+    "    RectangularStressBlock,\n",
+    "    ConcreteSection,\n",
+    ")\n",
+    "from concreteproperties.results import (\n",
+    "    MomentInteractionResults,\n",
+    "    BiaxialBendingResults,\n",
+    "    MomentCurvatureResults,\n",
+    ")"
    ]
   },
   {
@@ -130,20 +137,21 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "62f94928",
-   "metadata": {
-    "scrolled": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "geom_beam = concrete_rectangular_section(\n",
     "    b=500,\n",
     "    d=800,\n",
     "    dia_top=25,\n",
+    "    area_top=np.pi * 25**2 / 4,\n",
     "    n_top=5,\n",
+    "    c_top=35 + 12,\n",
     "    dia_bot=20,\n",
+    "    area_bot=np.pi * 25**2 / 4,\n",
     "    n_bot=5,\n",
+    "    c_bot=35 + 12,\n",
     "    n_circle=8,\n",
-    "    cover=35 + 12,\n",
     "    conc_mat=concrete_40,\n",
     "    steel_mat=steel_300E,\n",
     ")\n",
@@ -214,9 +222,7 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "7d5024b5",
-   "metadata": {
-    "scrolled": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "M_star_pos = 280.0\n",
@@ -333,18 +339,24 @@
    "outputs": [],
    "source": [
     "bar_dia = 20\n",
+    "area = np.pi * bar_dia**2 / 4\n",
     "\n",
     "geom_col = concrete_rectangular_section(\n",
     "    b=600,\n",
     "    d=600,\n",
     "    dia_top=bar_dia,\n",
+    "    area_top=area,\n",
     "    n_top=4,\n",
+    "    c_top=35 + 12,\n",
     "    dia_bot=bar_dia,\n",
+    "    area_bot=area,\n",
     "    n_bot=4,\n",
+    "    c_bot=35 + 12,\n",
     "    dia_side=bar_dia,\n",
+    "    area_side=area,\n",
     "    n_side=2,\n",
+    "    c_side=35 + 12,\n",
     "    n_circle=8,\n",
-    "    cover=35 + 12,\n",
     "    conc_mat=concrete_40,\n",
     "    steel_mat=steel_500E,\n",
     ")\n",
@@ -469,9 +481,7 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "bd208faa",
-   "metadata": {
-    "scrolled": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# design load cases\n",
@@ -528,9 +538,7 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "120cbe55",
-   "metadata": {
-    "scrolled": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# plot case 1\n",
@@ -677,13 +685,13 @@
     "concrete_25_prob = Concrete(\n",
     "    name=\"Mander Concrete\",\n",
     "    density=2300,\n",
-    "    stress_strain_profile=ssp.ModifiedMander(\n",
+    "    stress_strain_profile=ModifiedMander(\n",
     "        elastic_modulus=design_code.e_conc(prob_compressive_strength),\n",
     "        compressive_strength=prob_compressive_strength,\n",
     "        tensile_strength=prob_tensile_strength,\n",
     "        conc_tension=True,\n",
     "    ),\n",
-    "    ultimate_stress_strain_profile=ssp.RectangularStressBlock(\n",
+    "    ultimate_stress_strain_profile=RectangularStressBlock(\n",
     "        compressive_strength=prob_compressive_strength,\n",
     "        alpha=design_code.alpha_1(prob_compressive_strength),\n",
     "        gamma=design_code.beta_1(prob_compressive_strength),\n",
@@ -740,16 +748,20 @@
    "outputs": [],
    "source": [
     "bar_dia = 28\n",
+    "area = np.pi * bar_dia**2 / 4\n",
     "\n",
     "geom_beam = concrete_rectangular_section(\n",
     "    b=400,\n",
     "    d=600,\n",
     "    dia_top=bar_dia,\n",
+    "    area_top=area,\n",
     "    n_top=5,\n",
+    "    c_top=30 + 10,\n",
     "    dia_bot=bar_dia,\n",
+    "    area_bot=area,\n",
     "    n_bot=5,\n",
+    "    c_bot=30 + 10,\n",
     "    n_circle=16,\n",
-    "    cover=30 + 10,\n",
     "    conc_mat=concrete_25_prob,\n",
     "    steel_mat=steel_275,\n",
     ")\n",
@@ -839,16 +851,20 @@
     "steel_275 = design_code.create_steel_material(steel_grade=\"275\")\n",
     "\n",
     "bar_dia = 28\n",
+    "area = np.pi * bar_dia**2 / 4\n",
     "\n",
     "geom_beam = concrete_rectangular_section(\n",
     "    b=400,\n",
     "    d=600,\n",
     "    dia_top=bar_dia,\n",
+    "    area_top=area,\n",
     "    n_top=5,\n",
+    "    c_top=30 + 10,\n",
     "    dia_bot=bar_dia,\n",
+    "    area_bot=area,\n",
     "    n_bot=5,\n",
+    "    c_bot=30 + 10,\n",
     "    n_circle=8,\n",
-    "    cover=30 + 10,\n",
     "    conc_mat=concrete_25,\n",
     "    steel_mat=steel_275,\n",
     ")\n",
@@ -972,7 +988,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.15"
+   "version": "3.11.4"
   },
   "vscode": {
    "interpreter": {
