--- a/docs/examples/prestressed_section.ipynb
+++ b/docs/examples/prestressed_section.ipynb
@@ -25,12 +25,19 @@
    "source": [
     "import matplotlib.pyplot as plt\n",
     "import numpy as np\n",
-    "from sectionproperties.pre.library.primitive_sections import rectangular_section\n",
+    "from sectionproperties.pre.library import rectangular_section\n",
     "\n",
-    "import concreteproperties.stress_strain_profile as ssp\n",
-    "from concreteproperties.material import Concrete, SteelStrand\n",
-    "from concreteproperties.pre import add_bar_rectangular_array\n",
-    "from concreteproperties.prestressed_section import PrestressedSection\n",
+    "from concreteproperties import (\n",
+    "    Concrete,\n",
+    "    SteelStrand,\n",
+    "    EurocodeNonLinear,\n",
+    "    BilinearStressStrain,\n",
+    "    ConcreteLinearNoTension,\n",
+    "    StrandHardening,\n",
+    "    add_bar_rectangular_array,\n",
+    "    PrestressedSection,\n",
+    ")\n",
+    "\n",
     "from concreteproperties.results import MomentCurvatureResults"
    ]
   },
@@ -57,7 +64,7 @@
     "concrete_service = Concrete(\n",
     "    name=\"C50/60 Concrete (Service)\",\n",
     "    density=2.4e-6,\n",
-    "    stress_strain_profile=ssp.EurocodeNonLinear(\n",
+    "    stress_strain_profile=EurocodeNonLinear(\n",
     "        elastic_modulus=37.0e3,\n",
     "        ultimate_strain=0.0035,\n",
     "        compressive_strength=58,\n",
@@ -65,7 +72,7 @@
     "        tensile_strength=4.1,\n",
     "        tension_softening_stiffness=10e3,\n",
     "    ),\n",
-    "    ultimate_stress_strain_profile=ssp.BilinearStressStrain(\n",
+    "    ultimate_stress_strain_profile=BilinearStressStrain(\n",
     "        compressive_strength=50 / 1.5,\n",
     "        compressive_strain=0.00175,\n",
     "        ultimate_strain=0.0035,\n",
@@ -77,12 +84,12 @@
     "concrete_ultimate = Concrete(\n",
     "    name=\"C50/60 Concrete (Ultimate)\",\n",
     "    density=2.4e-6,\n",
-    "    stress_strain_profile=ssp.ConcreteLinearNoTension(\n",
+    "    stress_strain_profile=ConcreteLinearNoTension(\n",
     "        elastic_modulus=37.0e3,\n",
     "        ultimate_strain=0.0035,\n",
     "        compressive_strength=50 / 1.5,\n",
     "    ),\n",
-    "    ultimate_stress_strain_profile=ssp.BilinearStressStrain(\n",
+    "    ultimate_stress_strain_profile=BilinearStressStrain(\n",
     "        compressive_strength=50 / 1.5,\n",
     "        compressive_strain=0.00175,\n",
     "        ultimate_strain=0.0035,\n",
@@ -94,7 +101,7 @@
     "strand_service = SteelStrand(\n",
     "    name=\"Y1860S7 Strand (Service)\",\n",
     "    density=7.85e-6,\n",
-    "    stress_strain_profile=ssp.StrandHardening(\n",
+    "    stress_strain_profile=StrandHardening(\n",
     "        yield_strength=1674,\n",
     "        elastic_modulus=195e3,\n",
     "        fracture_strain=0.035,\n",
@@ -107,7 +114,7 @@
     "strand_ultimate = SteelStrand(\n",
     "    name=\"Y1860S7 Strand (Ultimate)\",\n",
     "    density=7.85e-6,\n",
-    "    stress_strain_profile=ssp.StrandHardening(\n",
+    "    stress_strain_profile=StrandHardening(\n",
     "        yield_strength=1522,\n",
     "        elastic_modulus=195e3,\n",
     "        fracture_strain=0.035,\n",
@@ -130,9 +137,7 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "db626b85",
-   "metadata": {
-    "scrolled": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# combine both stress-strain profiles on the same plot\n",
@@ -646,7 +651,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.12"
+   "version": "3.11.4"
   },
   "vscode": {
    "interpreter": {
