--- a/docs/examples/stress_analysis.ipynb
+++ b/docs/examples/stress_analysis.ipynb
@@ -25,14 +25,15 @@
    "source": [
     "import numpy as np\n",
     "from rich.pretty import pprint\n",
-    "from concreteproperties.material import Concrete, SteelBar\n",
-    "from concreteproperties.stress_strain_profile import (\n",
+    "from concreteproperties import (\n",
+    "    Concrete,\n",
+    "    SteelBar,\n",
     "    EurocodeNonLinear,\n",
     "    RectangularStressBlock,\n",
     "    SteelElasticPlastic,\n",
+    "    ConcreteSection,\n",
     ")\n",
-    "from sectionproperties.pre.library.concrete_sections import concrete_circular_section\n",
-    "from concreteproperties.concrete_section import ConcreteSection"
+    "from sectionproperties.pre.library import concrete_circular_section"
    ]
   },
   {
@@ -102,12 +103,11 @@
    "source": [
     "geom = concrete_circular_section(\n",
     "    d=600,\n",
-    "    n=32,\n",
-    "    dia=20,\n",
-    "    n_bar=10,\n",
-    "    n_circle=4,\n",
     "    area_conc=np.pi * 600 * 600 / 4,\n",
+    "    n_conc=32,\n",
+    "    dia_bar=20,\n",
     "    area_bar=310,\n",
+    "    n_bar=10,\n",
     "    cover=45,\n",
     "    conc_mat=concrete,\n",
     "    steel_mat=steel,\n",
@@ -149,9 +149,7 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "b2cef230",
-   "metadata": {
-    "scrolled": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "uncr_stress_res_1.plot_stress()"
@@ -417,9 +415,7 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "4d4cdd1b",
-   "metadata": {
-    "scrolled": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# loop through each input\n",
@@ -552,7 +548,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.12"
+   "version": "3.11.4"
   },
   "vscode": {
    "interpreter": {
