--- a/docs/examples/ultimate_bending.ipynb
+++ b/docs/examples/ultimate_bending.ipynb
@@ -24,11 +24,14 @@
    "outputs": [],
    "source": [
     "import numpy as np\n",
-    "from concreteproperties.material import Concrete, SteelBar\n",
+    "from concreteproperties import (\n",
+    "    Concrete,\n",
+    "    SteelBar,\n",
+    "    add_bar_rectangular_array,\n",
+    "    ConcreteSection,\n",
+    ")\n",
     "import concreteproperties.stress_strain_profile as ssp\n",
-    "import sectionproperties.pre.library.primitive_sections as sp_ps\n",
-    "from concreteproperties.pre import add_bar_rectangular_array\n",
-    "from concreteproperties.concrete_section import ConcreteSection"
+    "from sectionproperties.pre.library import rectangular_section, triangular_section"
    ]
   },
   {
@@ -90,13 +93,13 @@
    "outputs": [],
    "source": [
     "# construct box by subtracting an inner rectangle from an outer rectangle\n",
-    "outer = sp_ps.rectangular_section(d=1200, b=900, material=concrete)\n",
-    "inner = sp_ps.rectangular_section(d=900, b=600).align_center(align_to=outer)\n",
+    "outer = rectangular_section(d=1200, b=900, material=concrete)\n",
+    "inner = rectangular_section(d=900, b=600).align_center(align_to=outer)\n",
     "box = outer - inner\n",
     "\n",
     "# generate four chamfers\n",
     "chamfer1 = (\n",
-    "    sp_ps.triangular_section(b=50, h=50, material=concrete)\n",
+    "    triangular_section(b=50, h=50, material=concrete)\n",
     "    .align_to(other=inner, on=\"left\", inner=True)\n",
     "    .align_to(other=inner, on=\"bottom\", inner=True)\n",
     ")\n",
@@ -177,9 +180,7 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "0be09fce",
-   "metadata": {
-    "scrolled": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "sag_res.print_results()"
@@ -290,7 +291,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.12"
+   "version": "3.11.4"
   },
   "vscode": {
    "interpreter": {
