Various docs fixes

--- a/docs/user_guide/design_codes/as3600.rst
+++ b/docs/user_guide/design_codes/as3600.rst
@@ -101,4 +101,4 @@ reduction factors applied.
 
 .. seealso::
   For an application of the use of the design code object, see the example
-  :ref:`/notebooks/as3600.ipynb`.
+  :ref:`/examples/as3600.ipynb`.
