--- a/docs/user_guide/design_codes/nzs3101.rst
+++ b/docs/user_guide/design_codes/nzs3101.rst
@@ -101,4 +101,4 @@ reduction factors applied.
 
 .. seealso::
   For an application of the use of the design code object, see the example
-  :ref:`/notebooks/nzs3101.ipynb`.
+  :ref:`/examples/nzs3101.ipynb`.
